development/kagent-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
  namespace: kagent-local
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: kagent-local.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent-local
            port:
              number: 80
              
  tls:
  - hosts:
    - kagent-local.dev
    secretName: kagent-tls-certs
